update publi and cv

--- a/cursusEN.html
+++ b/cursusEN.html
@@ -69,11 +69,12 @@
     <div id="page">
 
       <h1>CV 					
-<span >&nbsp;&nbsp;</span> [ <a href="CV_carvalho_09_2021.pdf" title='charger 
+<span >&nbsp;&nbsp;</span> [ <a href="CV_carvalho_Jan_2023.pdf" title='charger 
 cv_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp; </h1>
 	  
 <h2>2022-present: Associate Professor</h2>
 <li>Maîtresse de conférence (Associate professor) at INSA de Lyon</li>
+<li>2023: Assistant Researcher at UC Merced</li>
 <h2>2018-2022: Assistant Professor</h2>
 <li>Assistant professor at UC Merced</li>
 <h2>2016-2018: VAP</h2>
