--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
       <img src="img/photos/cc21.jpg" width="145" class="floatLeft">
           </div>
           <p>  
-    	      I'm a Maîtresse de conférence (Associate Professor) at INSA de Lyon, I'm part of the MMCS team at <a href="http://math.univ-lyon1.fr/spip.php?article13&lang=fr" title="Visit FullAhead">Institut Camille Jordan</a>. From 2018 to 2022 I was an Assistant Professor of Applied Mathematics at the <a href="https://appliedmath.ucmerced.edu/faculty" title="UCM">University of California Merced</a>. <br>
+    	      I'm a Maîtresse de conférence (Associate Professor) at INSA de Lyon, I'm part of the MMCS team at <a href="http://math.univ-lyon1.fr/spip.php?article13&lang=fr" title="Visit FullAhead">Institut Camille Jordan</a>. <br>
+			  I'm also an Assistant Researcher at the <a href="https://appliedmath.ucmerced.edu/faculty" title="UCM">University of California Merced</a>. <br> 
+			  From 2018 to 2022 I was an Assistant Professor of Applied Mathematics at UC Merced. <br>
   		  I'm interested in developing new efficient numerical methods for interface problems, especially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems, Finite Element-based methods to accurately capture near-fields in plasmonic structures, integral equation methods for close evaluation problems. <br>
   	 	<a href="https://github.com/carvalhocamille"><img src="img/github2.png" width="55"></a>	
   	 	<a href="https://scholar.google.fr/citations?user=RY1F4S8AAAAJ&hl=en"><img src="img/scholar.png" width="50"></a>	
