--- a/publis.html
+++ b/publis.html
@@ -74,7 +74,7 @@
 			https://arxiv.org/abs/2010.07583" title="Scholar"><span class="big">P</span>ublications listed on Google Scholar</a>
   			<ol class='publisItems' reversed = "">				
 		<li >
-	  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Scattering resonances for unbounded transmission problems with sign-changing coefficient, in revision. </span>
+	  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Scattering resonances for unbounded transmission problems with sign-changing coefficient, IMA Journal of Applied Mathematics, accepted, 2023. </span>
   [<a href="https://hal.archives-ouvertes.fr/hal-02965993/document" title="CM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Asymptotic_metacavity" title="CMcodes"><span class="big">C</span>odes</a>]
 		</li>
   				<li >
@@ -87,7 +87,7 @@
 			 [<a href="https://github.com/carvalhocamille/Subtraction_techniques" title="Ccodes"><span class="big">C</span>odes</a>]
    				</li>
   				<li >
-  			  <span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>L. Lewis</span>,  <span class='author'>Z. Moitier</span>, Quadrature by Parity Asymptotic eXpansions (QPAX) for scattering by high aspect ratio particles, SIAM Multiscale Modeling and Simulation, (in press) 2021. </span>[<a href="https://arxiv.org/abs/2105.02136" title="CKLM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Scattering_BIE_QPAX" title="CKLMcodes"><span class="big">C</span>odes</a>]
+  			  <span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>L. Lewis</span>,  <span class='author'>Z. Moitier</span>, Quadrature by Parity Asymptotic eXpansions (QPAX) for scattering by high aspect ratio particles, SIAM Multiscale Modeling and Simulation, 19(2021), 1857--1884. </span>[<a href="https://arxiv.org/abs/2105.02136" title="CKLM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Scattering_BIE_QPAX" title="CKLMcodes"><span class="big">C</span>odes</a>]
   				</li>
 				<li >
 					<span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, <span class='author'>R. Cortes</span>, <span class='author'>C. Carvalho</span>,
@@ -202,11 +202,12 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
 			
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
-				<li >Numerical methods for the close evaluation of layer potentials in three dimensions, UML-UNC Computational Math seminar, October 2022.</li>
-			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, WAVES, Palaiseau, July 2022.</li>
-			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio particle, <a href="http://perso.ec-lyon.fr/helene.hivert/MMCS.html">[MMCS team day]</a>, France, June 2022.</li>
-			<li >On the use of Perfectly Matched Layers for light scattering problems in plasmonic structures, CIRM, Marseille, May 2022.</li>
-			<li >Accurate evaluation of near-fields in plasmonic structures, Institut Camille Jordan, France, January 2022.</li>
+			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, SIAM CSE23, Amsterdam, 2023.</li>
+			<li >Numerical methods for the close evaluation of layer potentials in three dimensions, UML-UNC Computational Math seminar, 2022.</li>
+			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, WAVES, Palaiseau, 2022.</li>
+			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio particle, <a href="http://perso.ec-lyon.fr/helene.hivert/MMCS.html">[MMCS team day]</a>, France, 2022.</li>
+			<li >On the use of Perfectly Matched Layers for light scattering problems in plasmonic structures, CIRM, Marseille, 2022.</li>
+			<li >Accurate evaluation of near-fields in plasmonic structures, Institut Camille Jordan, France, 2022.</li>
 		    <li >Subtraction techniques for the close evaluation of layer potentials, SIAM CSE, Spring 2021.</li>
 			<li >Accurate evaluation of near-fields in plasmonic structures, University of Nice, France, Spring 2021.</li>
 			<li >Limiting amplitude principle in plasmonic structures with corners, Energy and the Environment seminar, UC Merced, 2020. <a href="https://ucmerced.app.box.com/s/btqk4zw4he5kqldzykj1tohplahilufv"title="UCM">[Video of the talk]</a></li>
