--- a/publis.html
+++ b/publis.html
@@ -74,8 +74,8 @@
 			https://arxiv.org/abs/2010.07583" title="Scholar"><span class="big">P</span>ublications listed on Google Scholar</a>
   			<ol class='publisItems' reversed = "">				
 		<li >
-	  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Scattering resonances for unbounded transmission problems with sign-changing coefficient, IMA Journal of Applied Mathematics, accepted, 2023. </span>
-  [<a href="https://hal.archives-ouvertes.fr/hal-02965993/document" title="CM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Asymptotic_metacavity" title="CMcodes"><span class="big">C</span>odes</a>]
+	  <span class='author'>C. Carvalho</span>,   <span class='author'>Z. Moitier</span>, Scattering resonances for unbounded transmission problems with sign-changing coefficient, IMA Journal of Applied Mathematics, in press, 2023. </span>
+  [<a href="https://hal.archives-ouvertes.fr/hal-02965993/document" title="CM20"><span class="big">P</span>reprint</a>][<a href="https://github.com/zmoitier/Asymptotic_metacavity" title="CMcodes"><span class="big">C</span>odes</a>][<a href="https://doi.org/10.1093/imamat/hxad005" title="doi"><span class="big">D</span>OI</a>]
 		</li>
   				<li >
   			  <span class='author'>C. Carvalho</span>, <span class='author'>C. Ciarlet Jr.</span>, <span class='author'>C. Scheid</span>, Limiting amplitude principle and resonances in plasmonic structures with corners: numerical investigation, Computer Methods in Applied Mechanics and Engineering, 388(2022), 114207. </span>[<a href="https://reader.elsevier.com/reader/sd/pii/S0045782521005387?token=3B04B10CFB0A5C0185ACF536AD1E54FF70E3F24AC745BFEFC7CB47323ED28D36AEEBB15F9BE1DE611E090349F287BE0E&originRegion=us-east-1&originCreation=20211021211952" title="CCS21"><span class="big">P</span>aper</a>]
