update group students

--- a/Research.html
+++ b/Research.html
@@ -60,7 +60,7 @@
 		  <li><a href="publis.html" title="publis"><span class="big">P</span>ublications</a></li>
           <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
           <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-		   <li><a href="group.html" title="Group"><span class="big">G</span>roup</a></li>
+		   <li><a href="group.html" title="Group"><span class="big">S</span>tudents</a></li>
         </ul>
 
 
