--- a/Teaching.html
+++ b/Teaching.html
@@ -60,13 +60,21 @@
 		  <li><a href="publis.html" title="publis"><span class="big">P</span>ublications</a></li>
           <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
           <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-		   <li><a href="group.html" title="Group"><span class="big">G</span>roup</a></li>
+		   <li><a href="group.html" title="Group"><span class="big">S</span>tudents</a></li>
         </ul>
      
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
-		
+		<h2>Spring 2024: Instructor at INSA de Lyon</h2>
+		<li>TA for Numerical Mathematical Tools (OMNI, first-year)</li>
+		<li>Instructor for P2I8 math module on Fourier Series (second-year)</li>
+		<li>Instructor for P2I7 numerical methods and final project modules (second-year)</li>
+		<h2>Fall 2023: Instructor at INSA de Lyon</h2>
+	    <li>Instructor of record for Mathematics SCAN (first-year)</li>
+		<li>TA for Mathematics SCAN (first-year)</li>
+		<li>TA for Numerical Mathematical Tools (OMNI, first-year)</li>
+		<li>TA for Mathematics in the SGM department (third-year)</li>
 		<h2>Spring 2023: Instructor at INSA de Lyon</h2>
 		<li>TA for Mathematics (first-year)</li>
 		<li>TA for Numerical Mathematical Tools (OMNI, first-year)</li>
