--- a/cursusEN.html
+++ b/cursusEN.html
@@ -60,7 +60,7 @@
 		  <li><a href="publis.html" title="publis"><span class="big">P</span>ublications</a></li>
           <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
           <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-		  <li><a href="group.html" title="Group"><span class="big">G</span>roup</a></li>
+		  <li><a href="group.html" title="Group"><span class="big">S</span>tudents</a></li>
         </ul>
    
 
@@ -74,7 +74,8 @@ cv_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' cla
 	  
 <h2>2022-present: Associate Professor</h2>
 <li>Maîtresse de conférence (Associate professor) at INSA de Lyon</li>
-<li>2023: Assistant Researcher at UC Merced</li>
+<li>2024: Associate Researcher at UC Merced</li>
+<li>2023-2024: Assistant Researcher at UC Merced</li>
 <h2>2018-2022: Assistant Professor</h2>
 <li>Assistant professor at UC Merced</li>
 <h2>2016-2018: VAP</h2>
