--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   		  <li><a href="publis.html" title="publis"><span class="big">P</span>ublications</a></li>
             <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
             <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-			 <li><a href="group.html" title="Group"><span class="big">G</span>roup</a></li>
+			 <li><a href="group.html" title="Students"><span class="big">S</span>tudents</a></li>
           </ul>
     
 
@@ -72,7 +72,7 @@
           </div>
           <p>  
     	      I'm a Maîtresse de conférence (Associate Professor) at INSA de Lyon, I'm part of the MMCS team at <a href="http://math.univ-lyon1.fr/spip.php?article13&lang=fr" title="Visit FullAhead">Institut Camille Jordan</a>. <br>
-			  I'm also an Assistant Researcher at the <a href="https://appliedmath.ucmerced.edu/faculty" title="UCM">University of California Merced</a>. <br> 
+			  I'm also an Associate Researcher at the <a href="https://appliedmath.ucmerced.edu/faculty" title="UCM">University of California Merced</a>. <br> 
 			  From 2018 to 2022 I was an Assistant Professor of Applied Mathematics at UC Merced. <br>
   		  I'm interested in developing new efficient numerical methods for interface problems, especially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems, Finite Element-based methods to accurately capture near-fields in plasmonic structures, integral equation methods for close evaluation problems. <br>
   	 	<a href="https://github.com/carvalhocamille"><img src="img/github2.png" width="55"></a>	
@@ -86,7 +86,6 @@
 		<img src="img/insa.png" width="180">
 		<img src="img/icj.png" width="100">
 		<img src="img/merced-logo.jpg" width="200">
-			 <img src="img/logo_group_research.png" width="500">
             <div>
     		<a href="FEM.html"><img src="img/summary_pmls.png" width="190"></a>
             <a href="FEM.html"><img src="img/Triangle_Tconform.jpg" width="150"></a>
@@ -103,21 +102,19 @@
 		 ccarvalho3 AT ucmerced dot edu <br>
 		 	  </p>
  <h1>Collaborators</h1>
- <li>Vrushali Bokil (OSU)</li>
- <li>Anne-Sophie Bonnet BenDhia (POEMS)</li>
- <li>Lucas Chesnel (DEFI)</li>
- <li>Patrick Ciarlet (POEMS)</li>
- <li>Ricardo Cortez (Tulane University)</li>
- <li>Shilpa Khatri (UCM)</li>
- <li>Arnold D. Kim (UCM)</li>
- <li>Zoïs Moitier (KIT)</li>
- <li>Puttha Sakkaplangkul (IoT Ladkrahang)</li>
- <li>Claire Scheid (ATLANTIS)</li>		  		
-	 
+ <li>(ICJ) Elie Bretin, Laurence Grammont, Yves Renard, Laurent Seppecher</li>	
+ <li>(INL) Lydie Ferrier</li>	
+ <li>(POEMS INRIA) Anne-Sophie Bonnet BenDhia, Stéphanie Chaillat-Loseille, Lucas Chesnel, Patrick Ciarlet, Zoïs Moitier</li>
+ <li>(ATLANTIS INRIA) Stéphane Lantéri, Claire Scheid</li>
+ <li>(Oregon State University) Vrushali Bokil</li>
+ <li>(Tulane University) Ricardo Cortez </li>
+ <li>(University of California Merced) Shilpa Khatri, Arnold D. Kim, Chrysoula Tsogka</li>
+  		 
 <h1> Funding provided by </h1>
             <div>
     		<a href="https://www.nsf.gov/"><img src="img/NSF-logo.png" width="110"></a>				
             <a href="https://www.ucmerced.edu/"><img src="img/merced-logo.jpg" width="200"></a>
+			<a href="https://www.insa-lyon.fr/"><img src="img/logo_INSA.png" width="200"></a>
 		</div>
 
 
