--- a/publis.html
+++ b/publis.html
@@ -60,7 +60,7 @@
 		  <li><a href="publis.html" title="publis"><span class="big">P</span>ublications</a></li>
           <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
           <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-		   <li><a href="group.html" title="Group"><span class="big">G</span>roup</a></li>
+		   <li><a href="group.html" title="Group"><span class="big">S</span>tudents</a></li>
         </ul>
 
 
@@ -202,7 +202,9 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
 			
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
-				<li >Scattering instabilities for metamaterial cavities, NACONF23, Glasgow, 2023.</li>
+				<li >TBA, JO des poètes (60th anniversary conference), 2024.</li>
+				<li >Scattering instabilities for metamaterial cavities, GRD Ondes 2023, Marseille.</li>
+				<li >Scattering instabilities for metamaterial cavities, NACONF23, Glasgow.</li>
 				<li >Numerical methods for the close evaluation of layer potentials in three dimensions, ANEDP seminar, Lille, 2023.</li>
 				<li >Résonances de scattering pour cavités de métamatériaux, Journées EDP de l'IECL (annulé).</li>
 			<li >Quadrature by Parity Asymptotic eXpansions (QPAX) for light scattering by high aspect ratio plasmonic particle, SIAM CSE23, Amsterdam, 2023.</li>
