--- a/MMCS.html
+++ b/MMCS.html
@@ -89,7 +89,11 @@
 	 camille.carvalho(at)insa-lyon.fr
      <h1>Equipe d'organisation</h1>
 	 Camille Carvalho, Filippo Santambrogio
+	 
+	 	<img src="img/logosICJ.png" width="650">	
     </div>
+	
+
 
  </div>
  </div>
