--- a/MMCS.html
+++ b/MMCS.html
@@ -49,31 +49,31 @@
     <div id="header">
       <h1><span class="big darkBrown">J</span>ournée d'équipe <span class="big darkBrown">MMCS</span> 2024</h1>
     </div>
-
-<h3>La journée d'équipe 2024 aura lieu le 18/19 juin 2024 à l'INSA de Lyon, Bibliothèque Marie-Curie.</h3>
+<h3>La journée d'équipe 2024 aura lieu le 18 juin 2024 à l'INSA de Lyon, Bibliothèque Marie-Curie.</h3>
+<img src="img/insa-lyon2.jpeg" width="350">	
     <div id="page">  	
 	 <h1>Programme</h1>
-	 10h-10h30 : ACCUEIL<br>
+	 9h30-10h10 : ACCUEIL<br>
 
-	 10h30-11h <br>
+	 10h10-10h50 : Eve MacHefert <br> 
 	 
-	 11h-11h30<br>
+	 10h50-11h30 : Pierre Roux <br>
 	 
-	 11h30-12h<br>
+	 11h30-12h10 : Alexndre Lanar <br>
 
-	 12h-13h30 : REPAS<br>
+	 12h10-13h40 : REPAS <br>
 
-	 13h30-14h<br>
+	 13h40-14h20 : Annette Dumas <br>
 
-	 14h-14h30<br>
+	 14h20-15h : Adrien Petrov <br>
 
-	 14h30-15h<br>
+	 15h-15h40 :  Youcef Mammeri <br>
 	  
-	 15h-15h30 : PAUSE<br>
+	 15h40-16h : PAUSE<br>
 	 
-	 15h30-16h<br>
+	 16h-16h40 : Michèle Romanos <br>
 
-	 16h-16h30 <br>
+	 16h40-17h20 <br>
 	 
 	 <h1>Inscription</h1>
 	 <h3>L'inscription est gratuite mais obligatoire. Clôture des inscription le 20 mai 2024.</h3>
