--- a/MMCS.html
+++ b/MMCS.html
@@ -75,10 +75,9 @@
 
 	 16h40-17h20 <br>
 	 
-	 <h1>Inscription</h1>
-	 <h3>L'inscription est gratuite mais obligatoire. Clôture des inscription le 20 mai 2024.</h3>
-	 <h1>Plan d'accès  [<a href="https://materiaux.insa-lyon.fr/sites/sgm.insa-lyon.fr/files/u158/plan-campus-insa_2022_amphi_emilie_du_chatelet.pdf" title="plan">
-		 Ici</a>]</h1>
+	 <h1>Inscription [<a href="https://evento.renater.fr/survey/inscription-journee-d-equipe-mmcs-i893dhw3" title="plan">Ici</a>]</h1>
+	 <h3>L'inscription est gratuite mais obligatoire. Clôture des inscriptions le 31 mai 2024.</h3>
+	 <h1>Plan d'accès  [<a href="https://materiaux.insa-lyon.fr/sites/sgm.insa-lyon.fr/files/u158/plan-campus-insa_2022_amphi_emilie_du_chatelet.pdf" title="plan">Ici</a>]</h1>
 	 <li>Amphithéâtre Emilie du Châtelet, Bibliothèque Marie Curie, INSA Lyon </li>
 	 <li>Adresse : 31 avenue Jean Capelle, 69621 Villeurbanne</li>
 	 <li>Venir en transports : 
