--- a/MMCS.html
+++ b/MMCS.html
@@ -49,9 +49,11 @@
     <div id="header">
       <h1><span class="big darkBrown">J</span>ournée d'équipe <span class="big darkBrown">MMCS</span> 2024</h1>
     </div>
-<h3>La journée d'équipe 2024 aura lieu le 18 juin 2024 à l'INSA de Lyon, Bibliothèque Marie-Curie.</h3>
-<img src="img/insa-lyon2.jpeg" width="350">	
-    <div id="page">  	
+	    <div id="page">  
+<h3>Mardi 18 juin 2024 à l'INSA de Lyon</h3>
+	<h3>Bibliothèque Marie-Curie, Amphi Emilie du Châtelet</h3>
+	
+		<img src="img/insa-lyon2.jpeg" width="350">	
 	 <h1>Programme</h1>
 	 9h30-10h10 : ACCUEIL<br>
 
