--- a/MMCS.html
+++ b/MMCS.html
@@ -61,22 +61,23 @@
 	 
 	 10h50-11h30 : Pierre Roux <br>
 	 
-	 11h30-12h10 : Alexndre Lanar <br>
+	 11h30-12h10 : Michèle Romanos <br>
 
 	 12h10-13h40 : REPAS <br>
 
-	 13h40-14h20 : Annette Dumas <br>
+	 13h40-14h20 : Adrien Petrov <br>
 
-	 14h20-15h : Adrien Petrov <br>
+	 14h20-15h : Annette Dumas <br>
 
 	 15h-15h40 :  Youcef Mammeri <br>
 	  
 	 15h40-16h : PAUSE<br>
 	 
-	 16h-16h40 : Michèle Romanos <br>
+	 16h-16h40 : Alexndre Lanar <br>
 
 	 16h40-17h20 <br>
 	 
+	 <h1>Affiche [ <a href="afficheMMCS.pdf" title='charger afficheMMCS.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Ici</a> ]</h1>
 	 <h1>Inscription [<a href="https://evento.renater.fr/survey/inscription-journee-d-equipe-mmcs-i893dhw3" title="plan">Ici</a>]</h1>
 	 <h3>L'inscription est gratuite mais obligatoire. Clôture des inscriptions le 31 mai 2024.</h3>
 	 <h1>Plan d'accès  [<a href="https://materiaux.insa-lyon.fr/sites/sgm.insa-lyon.fr/files/u158/plan-campus-insa_2022_amphi_emilie_du_chatelet.pdf" title="plan">Ici</a>]</h1>
