--- a/MMCS.html
+++ b/MMCS.html
@@ -57,25 +57,25 @@
 	 <h1>Programme</h1>
 	 9h30-10h10 : ACCUEIL<br>
 
-	 10h10-10h50 : Eve MacHefert <br> 
+	 10h10-10h50 :  Adrien Petrov<br> 
 	 
-	 10h50-11h30 : Pierre Roux <br>
+	 10h50-11h30 : Michèle Romanos <br>
 	 
-	 11h30-12h10 : Michèle Romanos <br>
+	 11h30-12h10 : Pierre Roux <br>
 
 	 12h10-13h40 : REPAS <br>
 
-	 13h40-14h20 : Adrien Petrov <br>
+	 13h40-14h20 : Eve MacHefert <br>
 
-	 14h20-15h : Annette Dumas <br>
+	 14h20-15h :  Youcef Mammeri<br>
 
-	 15h-15h40 :  Youcef Mammeri <br>
+	 15h-15h40 :  Alexndre Lanar <br>
 	  
 	 15h40-16h : PAUSE<br>
 	 
-	 16h-16h40 : Alexndre Lanar <br>
+	 16h-16h40 : Annette Dumas <br>
 
-	 16h40-17h20 <br>
+	 16h40-17h20 : Frédéric Lagoutière <br>
 	 
 	 <h1>Affiche [ <a href="afficheMMCS.pdf" title='charger afficheMMCS.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Ici</a> ]</h1>
 	 <h1>Inscription [<a href="https://evento.renater.fr/survey/inscription-journee-d-equipe-mmcs-i893dhw3" title="plan">Ici</a>]</h1>
