--- a/MMCS.html
+++ b/MMCS.html
@@ -69,7 +69,7 @@
 
 	 14h20-15h :  Youcef Mammeri<br>
 
-	 15h-15h40 :  Alexndre Lanar <br>
+	 15h-15h40 :  Alexandre Lanar <br>
 	  
 	 15h40-16h : PAUSE<br>
 	 
