--- a/MMCS.html
+++ b/MMCS.html
@@ -65,7 +65,7 @@
 
 	 12h10-13h40 : REPAS <br>
 
-	 13h40-14h20 : Eve MacHefert <br>
+	 13h40-14h20 : Eve Machefert <br>
 
 	 14h20-15h :  Youcef Mammeri<br>
 
