add proceeding and talks

--- a/group.html
+++ b/group.html
@@ -87,9 +87,9 @@
           </tr>
 		    <br>
           <tr>
-            <td>PhD Candidate</td>
-			<td>PhD Candidate</td>
-			<td>Graduate Student</td>
+            <td>PhD Candidate (exp. grad. Summer 2025)</td>
+			<td>PhD Candidate (exp. grad. Summer 2025)</td>
+			<td>PhD Candidate (exp. grad. Summer 2025)</td>
 			<td>Graduate Student</td>
 			<td> </td>
           </tr>
