--- a/publis.html
+++ b/publis.html
@@ -134,6 +134,16 @@
   			<h1>Proceedings </h1>
   			<ol class='publisItems' reversed = "">
 				 <li >
+				<span class='author'>C. Carvalho</span>, <span class='author'>B. Latham</span>,
+				Plane Wave DG Method for Solving Helmholtz Equation in Complex Media, WAVES, Berlin, 2024. 
+				 </li>
+ 				 <li >
+ 				<span class='author'>C. Carvalho</span>, <span class='author'>S. Chaillat</span>, <span class='author'>E. A. Cortes</span>, <span class='author'>C. Tsogka</span>, Fast and accurate boundary integral equation methods for the multi-layer transmission problem, WAVES, Berlin, 2024. 
+ 				 </li>
+ 				 <li >
+ 				<span class='author'>C. Carvalho</span>, <span class='author'>A. D. Kim</span>, <span class='author'>C. McCullough</span>, Close evaluation of layer potentials in 3D for the multiple scattering, WAVES, Berlin, 2024. 
+ 				 </li>
+				 <li >
 				<span class='author'>M. Bussonnier</span>, <span class='author'>C. Carvalho</span>,
 				 Papyri: better documentation for the scientific ecosystem in Jupyter, Proceedings of the 21st Python in Science Conference (SciPy 2022), pp. 65-72, 2022. [<a href="https://conference.scipy.org/proceedings/scipy2022/pdfs/bussonnier.pdf" title='BC22' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Preprint </a>] 
 				 </li>
@@ -202,7 +212,7 @@ Waves13_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;
 			
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
-				<li >TBA, JO des poètes (60th anniversary conference), 2024.</li>
+				<li >Integral methods for the close evaluation problem, JO des poètes (60th anniversary conference, co-organizater), 2024. <a href="https://jondes2024.sciencesconf.org/"title="JO">[Conference site]</a></li>
 				<li >Scattering instabilities for metamaterial cavities, GRD Ondes 2023, Marseille.</li>
 				<li >Scattering instabilities for metamaterial cavities, NACONF23, Glasgow.</li>
 				<li >Numerical methods for the close evaluation of layer potentials in three dimensions, ANEDP seminar, Lille, 2023.</li>
