--- a/MMCS.html
+++ b/MMCS.html
@@ -65,15 +65,15 @@
 
 	 12h10-13h40 : REPAS <br>
 
-	 13h40-14h20 : Eve Machefert <br>
+	 13h40-14h20 : Eve Machefert "Approximation par champ de phase du problème de Plateau" <br>
 
 	 14h20-15h :  Youcef Mammeri<br>
 
-	 15h-15h40 :  Alexandre Lanar <br>
+	 15h-15h40 :  Alexandre Lanar "Agrégation-diffusion avec potentiel (pas trop) régulier: concentration et comportement à petite échelle"<br>
 	  
 	 15h40-16h : PAUSE<br>
 	 
-	 16h-16h40 : Annette Dumas <br>
+	 16h-16h40 : Annette Dumas "Jeux à champs moyen avec sauts"<br>
 
 	 16h40-17h20 : Frédéric Lagoutière <br>
 	 
