add team and title

--- a/MMCS.html
+++ b/MMCS.html
@@ -55,25 +55,26 @@
 	
 		<img src="img/insa-lyon2.jpeg" width="350">	
 	 <h1>Programme</h1>
-	 9h30-10h10 : ACCUEIL<br>
+	 Les exposés pourront être en français ou en anglais. <br> <br> 
+	 9h30-10h10 : ACCUEIL<br> <br> 
 
 	 10h10-10h50 :  Adrien Petrov<br> 
 	 
 	 10h50-11h30 : Michèle Romanos <br>
 	 
-	 11h30-12h10 : Pierre Roux <br>
+	 11h30-12h10 : Pierre Roux <br> <br> 
 
-	 12h10-13h40 : REPAS <br>
+	 12h10-13h40 : REPAS <br><br> 
 
 	 13h40-14h20 : Eve Machefert "Approximation par champ de phase du problème de Plateau" <br>
 
 	 14h20-15h :  Youcef Mammeri<br>
 
-	 15h-15h40 :  Alexandre Lanar "Agrégation-diffusion avec potentiel (pas trop) régulier: concentration et comportement à petite échelle"<br>
+	 15h-15h40 :  Alexandre Lanar "Agrégation-diffusion avec potentiel (pas trop) régulier: concentration et comportement à petite échelle"<br><br> 
 	  
-	 15h40-16h : PAUSE<br>
+	 15h40-16h : PAUSE<br> <br> 
 	 
-	 16h-16h40 : Annette Dumas "Jeux à champs moyen avec sauts"<br>
+	 16h-16h40 : Annette Dumas "Mean Field Games with jumps"<br>
 
 	 16h40-17h20 : Frédéric Lagoutière <br>
 	 
@@ -90,7 +91,8 @@
 	 <h1>Contact</h1>
 	 camille.carvalho(at)insa-lyon.fr
      <h1>Equipe d'organisation</h1>
-	 Camille Carvalho, Filippo Santambrogio
+	 Camille Carvalho, Filippo Santambrogio <br> 
+	 Sandrine Danon, Audrey Bretton
 	 
 	 	<img src="img/logosICJ.png" width="650">	
     </div>
