--- a/MMCS.html
+++ b/MMCS.html
@@ -70,7 +70,7 @@
 
 	 14h20-15h :  Youcef Mammeri<br>
 
-	 15h-15h40 :  Alexandre Lanar "Agrégation-diffusion avec potentiel (pas trop) régulier: concentration et comportement à petite échelle"<br><br> 
+	 15h-15h40 :  Alexandre Lanar "Aggregation-diffusion with (not too) regular potential: concentration and small-scale behaviour"<br><br> 
 	  
 	 15h40-16h : PAUSE<br> <br> 
 	 
