--- a/MMCS.html
+++ b/MMCS.html
@@ -85,8 +85,8 @@
 	 <li>Amphithéâtre Emilie du Châtelet, Bibliothèque Marie Curie, INSA Lyon </li>
 	 <li>Adresse : 31 avenue Jean Capelle, 69621 Villeurbanne</li>
 	 <li>Venir en transports : 
-	 <li>Tramway (T1) direction "IUT Feyssine", arrêt "INSA-Einstein"</li>
-	 <li>Tramway (T4) direction "La Doua Gaston Berger", arrêt "La Doua - Gaston Berger"</li>
+	 <li> ATTENTION TRAVAUX prévus sur les tram T1, T4 [<a href="https://www.tcl.fr/travaux-tramways/travaux-circulation-partielle-sur-les-lignes-t1-et-t4/travaux-du-lundi-3-juin-au-0" title="info">INFORMATION</a>] <br> Des bus relais sont mis en place à partir de l'arrêt "Thiers-Lafayette"'</li>
+
 	 <li>Bus C26, C17, arrêt "INSA-Einstein"</li>
 	 <h1>Contact</h1>
 	 camille.carvalho(at)insa-lyon.fr
