--- a/MMCS.html
+++ b/MMCS.html
@@ -60,7 +60,7 @@
 
 	 10h10-10h50 :  Adrien Petrov<br> 
 	 
-	 10h50-11h30 : Michèle Romanos <br>
+	 10h50-11h30 : Michèle Romanos "Mathematical modeling, analysis and simulation of collective dynamics in Myxo bacteria" <br>
 	 
 	 11h30-12h10 : Pierre Roux <br> <br> 
 
