--- a/MMCS.html
+++ b/MMCS.html
@@ -62,7 +62,7 @@
 	 
 	 10h50-11h30 : Michèle Romanos "Mathematical modeling, analysis and simulation of collective dynamics in Myxo bacteria" <br>
 	 
-	 11h30-12h10 : Pierre Roux <br> <br> 
+	 11h30-12h10 : Pierre Roux "Disentangling pulse-coupled oscillators in the mean-field regime through the pseudo-inverse in a dilated timescale"<br> <br> 
 
 	 12h10-13h40 : REPAS <br><br> 
 
