--- a/MMCS.html
+++ b/MMCS.html
@@ -76,7 +76,8 @@
 	 
 	 16h-16h40 : Annette Dumas "Mean Field Games with jumps"<br>
 
-	 16h40-17h20 : Frédéric Lagoutière <br>
+	 16h40-17h20 : Frédéric Lagoutière "Homogénéisation pour les mélanges de fluides compressibles : analyses,
+continue et semi-discrète, et illustration"<br>
 	 
 	 <h1>Affiche [ <a href="afficheMMCS.pdf" title='charger afficheMMCS.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Ici</a> ]</h1>
 	 <h1>Inscription [<a href="https://evento.renater.fr/survey/inscription-journee-d-equipe-mmcs-i893dhw3" title="plan">Ici</a>]</h1>
