--- a/MMCS.html
+++ b/MMCS.html
@@ -68,7 +68,7 @@
 
 	 13h40-14h20 : Eve Machefert "Approximation par champ de phase du problème de Plateau" <br>
 
-	 14h20-15h :  Youcef Mammeri<br>
+	 14h20-15h :  Youcef Mammeri "Imaging and spatio-temporal modelling of plant-pathogen lesions"<br>
 
 	 15h-15h40 :  Alexandre Lanar "Aggregation-diffusion with (not too) regular potential: concentration and small-scale behaviour"<br><br> 
 	  
