add final title

--- a/MMCS.html
+++ b/MMCS.html
@@ -58,7 +58,7 @@
 	 Les exposés pourront être en français ou en anglais. <br> <br> 
 	 9h30-10h10 : ACCUEIL<br> <br> 
 
-	 10h10-10h50 :  Adrien Petrov<br> 
+	 10h10-10h50 :  Adrien Petrov "Sur un résultat d'existence de solutions pour un modèle mathématique de troisième corps"<br> 
 	 
 	 10h50-11h30 : Michèle Romanos "Mathematical modeling, analysis and simulation of collective dynamics in Myxo bacteria" <br>
 	 
