add 10min pause

--- a/MMCS.html
+++ b/MMCS.html
@@ -72,11 +72,11 @@
 
 	 15h-15h40 :  Alexandre Lanar "Aggregation-diffusion with (not too) regular potential: concentration and small-scale behaviour"<br><br> 
 	  
-	 15h40-16h : PAUSE<br> <br> 
+	 15h40-16h10 : PAUSE<br> <br> 
 	 
-	 16h-16h40 : Annette Dumas "Mean Field Games with jumps"<br>
+	 16h10-16h50 : Annette Dumas "Mean Field Games with jumps"<br>
 
-	 16h40-17h20 : Frédéric Lagoutière "Homogénéisation pour les mélanges de fluides compressibles : analyses,
+	 16h50-17h30 : Frédéric Lagoutière "Homogénéisation pour les mélanges de fluides compressibles : analyses,
 continue et semi-discrète, et illustration"<br>
 	 
 	 <h1>Affiche [ <a href="afficheMMCS.pdf" title='charger afficheMMCS.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Ici</a> ]</h1>
