--- a/MMCS.html
+++ b/MMCS.html
@@ -56,7 +56,7 @@
 		<img src="img/insa-lyon2.jpeg" width="350">	
 	 <h1>Programme</h1>
 	 Les exposés pourront être en français ou en anglais. <br> <br> 
-	 9h30-10h10 : ACCUEIL<br> <br> 
+	 9h30-10h10 : ACCUEIL PETIT-DEJEUNER<br> <br> 
 
 	 10h10-10h50 :  Adrien Petrov "Sur un résultat d'existence de solutions pour un modèle mathématique de troisième corps"<br> 
 	 
