--- a/MMCS.html
+++ b/MMCS.html
@@ -62,22 +62,22 @@
 	 
 	 10h50-11h30 : Michèle Romanos "Mathematical modeling, analysis and simulation of collective dynamics in Myxo bacteria" <br>
 	 
-	 11h30-12h10 : Pierre Roux "Disentangling pulse-coupled oscillators in the mean-field regime through the pseudo-inverse in a dilated timescale"<br> <br> 
+	 11h30-12h10 : Pierre Roux "Disentangling pulse-coupled oscillators in the mean-field regime through the pseudo-inverse in a dilated timescale" <span >&nbsp;&nbsp;</span> [ <a href="exposes_mmcs/Roux.pdf" title='charger exposes_mmcs/Roux.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Slides </a> ] &nbsp;&nbsp;<br> <br> 
 
 	 12h10-13h40 : REPAS <br><br> 
 
-	 13h40-14h20 : Eve Machefert "Approximation par champ de phase du problème de Plateau" <br>
+	 13h40-14h20 : Eve Machefert "Approximation par champ de phase du problème de Plateau" <span >&nbsp;&nbsp;</span> [ <a href="exposes_mmcs/Machefert.pdf" title='charger exposes_mmcs/Machefert.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Slides </a> ] &nbsp;&nbsp;<br>
 
 	 14h20-15h :  Youcef Mammeri "Imaging and spatio-temporal modelling of plant-pathogen lesions"<br>
 
-	 15h-15h40 :  Alexandre Lanar "Aggregation-diffusion with (not too) regular potential: concentration and small-scale behaviour"<br><br> 
+	 15h-15h40 :  Alexandre Lanar "Aggregation-diffusion with (not too) regular potential: concentration and small-scale behaviour"<span >&nbsp;&nbsp;</span> [ <a href="exposes_mmcs/Lanar.pdf" title='charger exposes_mmcs/Lanar.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Slides </a> ] &nbsp;&nbsp;<br><br> 
 	  
 	 15h40-16h10 : PAUSE<br> <br> 
 	 
-	 16h10-16h50 : Annette Dumas "Mean Field Games with jumps"<br>
+	 16h10-16h50 : Annette Dumas "Mean Field Games with jumps" <span >&nbsp;&nbsp;</span> [ <a href="exposes_mmcs/Dumas.pdf" title='charger exposes_mmcs/Dumas.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Slides </a> ] &nbsp;&nbsp;<br>
 
 	 16h50-17h30 : Frédéric Lagoutière "Homogénéisation pour les mélanges de fluides compressibles : analyses,
-continue et semi-discrète, et illustration"<br>
+continue et semi-discrète, et illustration"<span >&nbsp;&nbsp;</span> [ <a href="exposes_mmcs/Lagoutiere.pdf" title='charger exposes_mmcs/Lagoutiere.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Slides </a> ] &nbsp;&nbsp;<br>
 	 
 	 <h1>Affiche [ <a href="afficheMMCS.pdf" title='charger afficheMMCS.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> Ici</a> ]</h1>
 	 <h1>Inscription [<a href="https://evento.renater.fr/survey/inscription-journee-d-equipe-mmcs-i893dhw3" title="plan">Ici</a>]</h1>
