add new pictures

--- a/group.html
+++ b/group.html
@@ -71,9 +71,9 @@
 		      <table>
         <tbody>
           <tr>
-            <td> <img src="img/photos/blatham.jpg" width="108">  </td>
+            <td> <img src="img/blatham.jpg" width="108">  </td>
 			<td>  <img src="img/photos/cmccullough.jpg" width="110"> </td>
-			<td>  <img src="img/ecortes.png" width="105"> </td>
+			<td>  <img src="img/ecortes2.jpg" width="105"> </td>
 				<td>  <img src="img/photos/asmidi.jpg" width="110"> </td>
 			<td> <img src="img/photos/guy.jpg" width="110"> </td>
           </tr>
