--- a/Teaching.html
+++ b/Teaching.html
@@ -66,6 +66,11 @@
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
+		<h2>Fall 2024: Instructor at INSA de Lyon</h2>
+	    <li>Instructor of record for Mathematics SCAN (first-year)</li>
+		<li>TA for Mathematics SCAN (first-year)</li>
+		<li>TA for Numerical Mathematical Tools (OMNI, first-year)</li>
+		<li>TA for Mathematics in the SGM department (third-year)</li>
 		<h2>Spring 2024: Instructor at INSA de Lyon</h2>
 		<li>TA for Numerical Mathematical Tools (OMNI, first-year)</li>
 		<li>Instructor for P2I8 math module on Fourier Series (second-year)</li>
