--- a/cursusEN.html
+++ b/cursusEN.html
@@ -74,8 +74,8 @@ cv_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' cla
 	  
 <h2>2022-present: Associate Professor</h2>
 <li>Maîtresse de conférence (Associate professor) at INSA de Lyon</li>
-<li>2024: Associate Researcher at UC Merced</li>
-<li>2023-2024: Assistant Researcher at UC Merced</li>
+<li>2023-2024: Associate Researcher at UC Merced</li>
+<li>2022-2023: Assistant Researcher at UC Merced</li>
 <h2>2018-2022: Assistant Professor</h2>
 <li>Assistant professor at UC Merced</li>
 <h2>2016-2018: VAP</h2>
