--- a/index.html
+++ b/index.html
@@ -68,13 +68,12 @@
 
           <h1>Presentation</h1>
           <div class="width25 floatLeft">
-      <img src="img/photos/cc21.jpg" width="145" class="floatLeft">
+      <img src="img/photos/c_carvalho_2025.jpg" width="155" class="floatLeft">
           </div>
           <p>  
     	      I'm a Maîtresse de conférence (Associate Professor) at INSA de Lyon, I'm part of the MMCS team at <a href="http://math.univ-lyon1.fr/spip.php?article13&lang=fr" title="Visit FullAhead">Institut Camille Jordan</a>. <br>
-			  I'm also an Associate Researcher at the <a href="https://appliedmath.ucmerced.edu/faculty" title="UCM">University of California Merced</a>. <br> 
-			  From 2018 to 2022 I was an Assistant Professor of Applied Mathematics at UC Merced. <br>
-  		  I'm interested in developing new efficient numerical methods for interface problems, especially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems, Finite Element-based methods to accurately capture near-fields in plasmonic structures, integral equation methods for close evaluation problems. <br>
+			  From 2018 to 2024 I was affiliated to the <a href="https://appliedmath.ucmerced.edu/faculty" title="UCM">University of California Merced</a>, as an Assistant Professor of Applied Mathematics (2018-2022), then Associate Researcher (2022-2024).  <br>
+I'm interested in developing new efficient numerical methods for interface problems, especially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems, Finite Element-based methods to accurately capture near-fields in plasmonic structures, integral equation methods for close evaluation problems. <br>
   	 	<a href="https://github.com/carvalhocamille"><img src="img/github2.png" width="55"></a>	
   	 	<a href="https://scholar.google.fr/citations?user=RY1F4S8AAAAJ&hl=en"><img src="img/scholar.png" width="50"></a>	
   	 	<a href="https://orcid.org/0000-0002-8426-549X"><img src="img/orcid.png" width="50"></a>	
